--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/states/loggedUser.ts", "src/scripts/ProfilePage/UserData.ts", "src/scripts/MapPage/map.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/states/loggedUser.ts", "src/scripts/ProfilePage/UserData.ts", "src/scripts/MapPage/Mappa.ts"]
 }
